6th try to fix unresponsiveness on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,7 @@ body {
 @media screen and (max-height: 400px) {
   #header {
     gap: 1em;
+    margin-top: 40vh;
   }
 }
 
